Работа над замечаниями

--- a/DIPLOM/src/Documents/ВКМ_ГрафикОтпусков/Forms/АнализГрафика/Form.form
+++ b/DIPLOM/src/Documents/ВКМ_ГрафикОтпусков/Forms/АнализГрафика/Form.form
@@ -296,8 +296,8 @@
     <horizontalAlign>Left</horizontalAlign>
   </autoCommandBar>
   <handlers>
-    <event>OnOpen</event>
-    <name>ПриОткрытии</name>
+    <event>OnCreateAtServer</event>
+    <name>ПриСозданииНаСервере</name>
   </handlers>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
